CHAP10/kustomize/manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-kusto
  labels:
    app: webapp-kusto
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: webapp-kusto
