CHAP10/kustomize/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-kusto
spec:
  ingressClassName: nginx
  rules:
    - host: webappp.my-domain.com
      http:
        paths:
        - backend:
            service:
              name: webapp-kusto
              port: 
                number: 80
          pathType: Prefix
          path: /
